--- a/TcpShell/TcpShell.vcxproj.filters
+++ b/TcpShell/TcpShell.vcxproj.filters
@@ -1482,6 +1482,12 @@
     <ClCompile Include="..\LwIP\src\netif\ppp\polarssl\sha1.c">
       <Filter>Source files\Device-specific files\lwIP\netif\ppp\polarssl</Filter>
     </ClCompile>
+    <ClCompile Include="User.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="LogonApp.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tcpshell.h">
@@ -1494,6 +1500,9 @@
       <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="ethernetif.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="User.h">
       <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
